// Copyright Â© 2019 Adir Tzuberi <adir85@gmail.com>
syntax = "proto3";
package proto;

message FetchRequest {
    repeated string dirs = 1;
    repeated string filenames = 2;
}

message FetchResponse {
    string name = 1;
    uint64 size = 2;
    bytes data = 3;
    uint64 part = 4;
    uint64 parts = 5;
    string md5 = 6;
}
